...
        android:layout_marginStart="-80dp"
        android:layout_marginLeft="-80dp"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="#99000000"
        app:layout_constraintEnd_toStartOf="@+id/editTextNewPhoneNumberAddNew"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView
...
